[package]
name = "darth-rust"
version = "0.8.3"
edition = "2021"
description = "Darth rust"
authors = ["Pas2Rust <pas2000@proton.me>"]
homepage = "https://github.com/pas2rust/darth-rust"
repository = "https://github.com/pas2rust/darth-rust"
license = "MIT"
exclude = [
    "tests/*",
    "tests",
]

[package.metadata.scripts]
dev = "cargo fmt && cargo clippy && cargo run"
test = "cargo fmt && cargo clippy && cargo test"
test_quiet = "cargo fmt && cargo clippy && cargo test --quiet"
deploy = "cargo fmt && cargo clippy && cargo package && cargo publish"
clean = "cargo clean && rm -rf target && rm -rf dist"

[package.metadata.docs.rs]
logo-url = "https://i.imgur.com/svdzGva.jpg"

[dependencies]
chrono = "^0.4.31"
colorful = "^0.2.2"
proc-macro2 = "^1.0.69"
quote = "^1.0.33"
serde = {version =  "^1.0.190", features = ["derive"]}
serde_json = "^1.0.108"
syn = {version = "^2.0.38", features = ["full"]}

[lib]
proc-macro = true
path = "src/lib.rs"
