[package]
name = "darth-rust"
version = "1.1.1"
edition = "2021"
description = "DarthRust is a Rust procedural macro library that aims to enhance developer productivity by auto-generating essential methods for struct manipulation. It provides a suite of macros that can be derived on any struct to equip it with a rich API for accessing and modifying fields, performing calculations, and handling input/output operations. With features like mutable and immutable getters, setters, JSON conversion methods, and custom printer functions for debugging, DarthRust streamlines the boilerplate code typically associated with struct management in Rust applications. It also includes unique methods for regex validation and range checking, further extending its utility. The library emphasizes ease of use, requiring only the addition of relevant crates and a simple derive attribute to unlock its full potential."
authors = ["Pas2Rust <pas2000@proton.me>"]
homepage = "https://github.com/pas2rust/darth-rust"
repository = "https://github.com/pas2rust/darth-rust"
license = "MIT"
exclude = [
    "tests/*",
    "tests",
]
keywords = ["logs", "json", "cache", "struct", "regex"]
[package.metadata.scripts]
dev = "cargo fmt && cargo clippy && cargo run"
test = "cargo fmt && cargo clippy && cargo test"
test_quiet = "cargo fmt && cargo clippy && cargo test --quiet"
deploy = "cargo fmt && cargo clippy && cargo package && cargo publish"
clean = "cargo clean && rm -rf target && rm -rf dist"

[package.metadata.docs.rs]
logo-url = "https://i.imgur.com/svdzGva.jpg"

[dependencies]
chrono = "^0.4.31"
colorful = "^0.2.2"
proc-macro2 = "^1.0.69"
quote = "^1.0.33"
regex = "1.10.3"
serde = {version =  "^1.0.190", features = ["derive"]}
serde_json = "^1.0.108"
syn = {version = "^2.0.38", features = ["full"]}

[lib]
proc-macro = true
path = "src/lib.rs"
