[package]
name = "darth-rust"
version = "4.3.2"
edition = "2021"
description = "DarthRust is a Rust procedural macro library that aims to enhance developer productivity by auto-generating essential methods for struct manipulation. It provides a suite of macros that can be derived on any struct to equip it with a rich API for accessing and modifying fields, performing calculations, and handling input/output operations. With features like mutable and immutable getters, setters, JSON conversion methods, and custom printer functions for debugging, DarthRust streamlines the boilerplate code typically associated with struct management in Rust applications. It also includes unique methods for regex validation and range checking, further extending its utility. The library emphasizes ease of use, requiring only the addition of relevant crates and a simple derive attribute to unlock its full potential."
authors = ["Pas2Rust <pas2000@proton.me>"]
homepage = "https://github.com/pas2rust/darth-rust"
repository = "https://github.com/pas2rust/darth-rust"
license = "MIT"
exclude = [
    "tests/*",
    "tests",
]
keywords = ["logs", "json", "regex", "validation", "build"]
[package.metadata.scripts]
dev = "cargo fmt && cargo clippy && cargo run"
test = "cargo fmt && cargo clippy && cargo test --all-features"
test_quiet = "cargo fmt && cargo clippy && cargo test --quiet"
deploy = "cargo fmt && cargo clippy && cargo package && cargo publish"
clean = "cargo clean && rm -rf target && rm -rf dist"

[package.metadata.docs.rs]
logo-url = "https://i.imgur.com/svdzGva.jpg"

[dependencies]
bincode = {version = "1.3.3", optional = true }
chrono = { version = "0.4.38", features = ["serde"], optional = true }
colorful = { version = "^0.2.2", optional = true }
hex = { version = "0.4.3", optional = true }
jsonwebtoken = { version = "9.3.0", optional = true }
openssl = { version = "0.10.64", optional = true  }
pqcrypto-dilithium = { version = "0.5.0", optional = true }
pqcrypto-kyber = { version = "0.8.1", optional = true }
proc-macro2 = "^1.0.86"
quote = "^1.0.36"
regex = "1.10.5"
serde = { version = "1.0.203", features = ["derive"], optional = true }
serde_json = { version = "1.0.118", optional = true }
syn = { version = "^2.0.68", features = ["full"] }

[lib]
proc-macro = true
path = "src/lib.rs"

[features]
default = ["full"]
math = []
get = []
get_mut = []
print_by_field = ["chrono", "colorful"]
print = ["chrono", "colorful"]
set = []
build = []
json = ["serde", "serde_json"]
camellia = ["openssl"]
aes = ["openssl"]
chacha20 = ["openssl"]
cryptography = ["camellia", "aes", "chacha20"]
full = ["build", "math", "print_by_field", "get", "get_mut", "json", "print", "set", "cryptography"]
